--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="QuestionHeader">
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:padding">16dp</item>
+    </style>
+
+    <style name="QuestionResponse">
+        <item name="android:paddingLeft">8dp</item>
+    </style>
 </resources>
